<resources>
    <string name="app_name">Bmi and Bmr Calculator </string>
    <string name="rafaqat">Rafaqat Mehmood</string>
    <string name="start">Start</string>
    <string name="your_health_journey_starts_here">Your Health Journey Starts Here</string>
    <string name="what_is_your_height">What is Your Height ?</string>
    <string name="select_your_height">Select Your Gender</string>
    <string name="height_helps_personalize_workouts_and_trackfitness_progress_accurately">Height helps personalize workouts and \ntrackfitness progress accurately</string>
    <string name="next">Next</string>
    <string name="what_is_your_weight">What is Your Weight ?</string>
    <string name="what_is_your_age">What is Your Age ?</string>
    <string name="knowing_your_weight_helps_us_tailor_n_workouts_track_progress_better"><![CDATA[Knowing your weight helps us tailor\n workouts & track progress better]]></string>
    <string name="knowing_your_age_helps_us_tailor_n_workouts_track_progress_better"><![CDATA[Knowing your age helps us tailor\n workouts & track progress better]]></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="your_age">Your Age</string>
    <string name="welcome_to_bmi_calculator">Welcome to Bmi Calculator</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_apps">More Apps</string>
    <string name="go_back_to_start_sscreen">Go Back To Start Sscreen</string>
    <string name="notification">Notification</string>
    <string name="bmr_calculator">BMR Calculator</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="blog">Blog Screen</string>
    <string name="blog_description">Blog Description</string>
    <string name="blog_time">Blog Time</string>
    <string name="blog_details">Blog Details</string>
</resources>