<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingAct">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/splash_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/topBg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@color/common_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </View>

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:layout_constraintStart_toStartOf="@id/topBg"
                app:layout_constraintBottom_toBottomOf="@id/topBg"
                app:layout_constraintEnd_toEndOf="@id/topBg"
                app:layout_constraintTop_toTopOf="@id/topBg"
                app:layout_constraintVertical_bias="0.03"
                app:layout_constraintHorizontal_bias="0.01"
                android:src="@drawable/back_arrow">

            </ImageView>

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintStart_toStartOf="@id/topBg"
                app:layout_constraintBottom_toBottomOf="@id/topBg"
                app:layout_constraintEnd_toEndOf="@id/topBg"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintTop_toTopOf="@id/topBg"
                android:src="@drawable/splash_logo">

            </ImageView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/welcome_to_bmi_calculator"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toStartOf="@id/topBg"
                app:layout_constraintBottom_toBottomOf="@id/icon"
                app:layout_constraintEnd_toEndOf="@id/topBg"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/icon">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topBg">

                <LinearLayout
                    android:id="@+id/backToScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/restart_screen">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/go_back_to_start_sscreen"
                        android:textColor="@color/common_color"
                        android:gravity="start|center"
                        android:paddingStart="3dp"
                        android:singleLine="true"
                        android:paddingTop="5dp"
                        android:fontFamily="@font/poppins_medium"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/notification_icon">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/notification"
                        android:textColor="@color/common_color"
                        android:gravity="start|center"
                        android:paddingStart="3dp"
                        android:singleLine="true"
                        android:paddingTop="5dp"
                        android:fontFamily="@font/poppins_medium"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/rate_us">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/rate_us"
                        android:textColor="@color/common_color"
                        android:gravity="start|center"
                        android:paddingStart="3dp"
                        android:singleLine="true"
                        android:paddingTop="5dp"
                        android:fontFamily="@font/poppins_medium"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/share_icon">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/share_app"
                        android:textColor="@color/common_color"
                        android:gravity="start|center"
                        android:paddingStart="3dp"
                        android:singleLine="true"
                        android:paddingTop="5dp"
                        android:fontFamily="@font/poppins_medium"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/privacy_policy">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/common_color"
                        android:gravity="start|center"
                        android:paddingStart="3dp"
                        android:singleLine="true"
                        android:paddingTop="5dp"
                        android:fontFamily="@font/poppins_medium"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/more_apps">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/more_apps"
                        android:textColor="@color/common_color"
                        android:gravity="start|center"
                        android:paddingStart="3dp"
                        android:singleLine="true"
                        android:paddingTop="5dp"
                        android:fontFamily="@font/poppins_medium"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>