<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlogDetailAct">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/splash_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/back"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/back_arrow"
        android:elevation="@dimen/_2sdp"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/blog_details"
        android:gravity="center|start"
        android:paddingStart="90dp"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/common_color"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/blogIcon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/see_more_icon"
                android:scaleType="fitXY"
                android:layout_margin="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintTop_toTopOf="parent">
            </ImageView>

            <TextView
                android:id="@+id/blogTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog_time"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/common__light_color"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.01"
                app:layout_constraintTop_toBottomOf="@id/blogIcon"
                app:layout_constraintBottom_toBottomOf="parent">
            </TextView>
            <TextView
                android:id="@+id/blogDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blog_description"
                android:textSize="20sp"
                android:gravity="center|start"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/common__light_color"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.03"
                app:layout_constraintTop_toBottomOf="@id/blogTime"
                app:layout_constraintBottom_toBottomOf="parent">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>